[gd_scene load_steps=2 format=3 uid="uid://bdvqgpfwcex63"]

[ext_resource type="Script" uid="uid://cphvgh0o3wdti" path="res://Components/PlayerDetector/player_detection_component.gd" id="1_okqui"]

[node name="PlayerDetectionComponent" type="Area2D"]
script = ExtResource("1_okqui")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
